--- a/src/Home.css
+++ b/src/Home.css
@@ -8,6 +8,75 @@
     color: #f5f5f5;
   }
 
-  .grommetux-value__value {
+.grommetux-value__value {
     font-weight: 300;
+}
+
+span.grommetux-value__label {
+    font-weight: 100;
+    font-size: 1.1rem;
+}
+
+h1.grommetux-heading.grommetux-heading--align-center.grommetux-heading--margin-small.grommetux-heading--uppercase {
+    font-size: 2.5rem;
+}
+
+.grommetux-box.grommetux-box--direction-column.grommetux-box--align-center.grommetux-box--responsive.grommetux-box--pad-medium.grommetux-box--margin-small.home-info-box {
+    min-height: 93vh;
+    max-height: 93vh;
+}
+
+.grommetux-paragraph {
+    color: #f5f5f5 !important;
+}
+
+
+.grommetux-anchor--primary {
+    /* color: #19A883 !important; */
+    color: #f37335 !important;
+    /* color:  #78C3FB !important; */
+}
+
+.grommetux-anchor:hover {
+    color: #f35d14 !important;    
+}
+
+.ui.menu .item {
+    color: #f5f5f5;
+}
+
+.grommetux-control-icon--xsmall {
+    width: 18px !important;
+    height: 18px !important;
+}
+
+.ui.item.dropdown {
+    border: solid 2px #00CCEB !important;
+    padding: 8px 22px !important;
+}
+
+.ui.secondary.menu .dropdown.item:hover, .ui.secondary.menu .link.item:hover, .ui.secondary.menu a.item:hover {
+    border: solid 4px #00CCEB !important;
+    padding: 8px 22px !important;
+    color: #f5f5f5 !important;
+    font-weight: 400 !important;
+}
+
+.ui.menu.fixed, .ui.menu.fixed .item:first-child, .ui.menu.fixed .item:last-child {
+    border-radius: 5px !important;
+}
+
+.grommetux-card__thumbnail {
+    min-height: 196px;
+    background-position-x: left !important;
+    background-size: 200px !important;
+}
+
+.home-intro-box {
+    background-color: rgba(33, 33, 33, 0.7);
+    color: #f5f5f5;
+}
+
+.grommetux-box.grommetux-box--direction-column.grommetux-box--responsive.grommetux-box--pad-medium.grommetux-card__content {
+    padding-left: 0 !important;
 }
