--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,18 @@
 body {
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
 }
+
+/* Responsive Branding */
+
+
+@media only screen and (max-width: 767px) and (min-width: 320px) {
+  .hide-on-mobile {
+      display: none !important;
+  }
+}
+
+@media only screen and (min-width: 767px) {
+  .hide-on-med-and-up {
+      display: none !important;
+  }
+}
