--- a/src/Home.css
+++ b/src/Home.css
@@ -113,3 +113,12 @@ h1.grommetux-heading.grommetux-heading--align-center.grommetux-heading--margin-s
 .grommetux-meter--circle .grommetux-meter__values .grommetux-meter__slice.grommetux-color-index-graph-1, .grommetux-meter--circle .grommetux-meter__values .grommetux-meter__slice.grommetux-color-index-graph-5, .grommetux-meter--arc .grommetux-meter__values .grommetux-meter__slice.grommetux-color-index-graph-1, .grommetux-meter--arc .grommetux-meter__values .grommetux-meter__slice.grommetux-color-index-graph-5, .grommetux-meter--spiral .grommetux-meter__values .grommetux-meter__slice.grommetux-color-index-graph-1, .grommetux-meter--spiral .grommetux-meter__values .grommetux-meter__slice.grommetux-color-index-graph-5 {
     stroke: #f9e33d !important;
 }
+
+/* Mobile branding  */
+@media only screen and (max-width: 767px) and (min-width: 320px) {
+    .grommetux-box.grommetux-box--direction-column.grommetux-box--align-center.grommetux-box--responsive.grommetux-box--pad-medium.grommetux-box--margin-small.home-info-box {
+        min-height: 80vh;
+        max-height: 80vh;
+    }
+  }
+
