update to homepage landing

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@
 
 body {
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
 }
 
 /* Responsive Branding */
