--- a/src/Home.css
+++ b/src/Home.css
@@ -92,9 +92,55 @@ h1.grommetux-heading.grommetux-heading--align-center.grommetux-heading--margin-s
 
 
 .ui.secondary.top.fixed.header-nav.menu {
-    background-color: #212121 !important;
+    background-color: transparent !important;
+    
     border-radius: 0px !important;
 }
+
+
+button.ui.icon.button.menu-button {
+    background-color: #212121;
+    color: #F8E14E;
+    margin-top: 10px !important;
+    font-size: 1.2rem !important;
+}
+
+button.ui.icon.button.menu-button:hover {
+    background-color: #F8E14E;
+    color: #212121;
+    /* width: 55px;
+    height: 55px;
+    font-size: 1.5em; */
+}
+
+a.ui.mini.image.menu-button {
+    width: 50px;
+    margin-top: 5%;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+}
+
+a.ui.mini.image.menu-button:hover {
+    width: 55px;
+}
+
+.ui.medium.image, .ui.medium.images .image, .ui.medium.images img, .ui.medium.images svg {
+    width: 390px;
+    height: auto;
+    font-size: 1rem;
+}
+
+h1.ui.header.typed-header {
+    font-family: 'Montserrat', sans-serif;
+    position: relative;
+    bottom: 65px;
+    color: #f5f5f5;
+    font-size: 1.8rem;
+    text-align: center;
+    font-weight: 200;
+}
+
+
 
 .ui[class*="bottom fixed"].menu {
     bottom: 10px;
@@ -119,7 +165,7 @@ h2.ui.header {
 }
 
 p.grommetux-paragraph.grommetux-paragraph--medium {
-    font-size: 17px;
+    font-size: 16px;
 }
 
 .ui.borderless.fluid.icon.three.item.menu {
