--- a/src/Home.css
+++ b/src/Home.css
@@ -64,10 +64,24 @@ h1.grommetux-heading.grommetux-heading--align-center.grommetux-heading--margin-s
 }
 
 .ui.secondary.menu .dropdown.item:hover, .ui.secondary.menu .link.item:hover, .ui.secondary.menu a.item:hover {
-    border: solid 4px #00CCEB !important;
+    /* border: solid 4px #00CCEB !important;
     padding: 8px 22px !important;
     color: #f5f5f5 !important;
-    font-weight: 400 !important;
+    font-weight: 400 !important; */
+    background: rgba(0,0,0,0) !important;
+}
+
+.ui.icon.menu .item>.icon:not(.dropdown):hover {
+    color: #F8E14E !important;
+    background: rgba(0,0,0,0) !important;
+}
+
+.grommetux-pulse__icon-anim {
+    border-color: #fbe851 !important;
+}
+
+.grommetux-pulse__icon svg {
+    background-color: transparent !important;
 }
 
 .ui.menu.fixed, .ui.menu.fixed .item:first-child, .ui.menu.fixed .item:last-child {
@@ -177,6 +191,20 @@ p.grommetux-paragraph.grommetux-paragraph--medium {
     .grommetux-box.grommetux-box--direction-column.grommetux-box--align-center.grommetux-box--responsive.grommetux-box--pad-medium.grommetux-box--margin-small.home-info-box {
         min-height: 80vh;
         max-height: 80vh;
+    }
+
+    .ui.card>.content>.header:not(.ui), .ui.cards>.card>.content>.header:not(.ui) {
+        font-weight: 700;
+        font-size: 1em;
+        margin-top: -.21425em;
+        line-height: 2em;
+        text-align: center;
+    }
+
+    .ui.medium.image, .ui.medium.images .image, .ui.medium.images img, .ui.medium.images svg {
+        width: 360px;
+        height: auto;
+        font-size: 1rem;
     }
   }
 
