--- a/src/Tools/Tools.css
+++ b/src/Tools/Tools.css
@@ -1,4 +1,4 @@
-.ui.secondary.top.fixed.bio-nav.menu {
+.ui.secondary.top.fixed.tool-nav.menu {
     background-color: #212121 !important;
     border-radius: 0px !important;
 }
