--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-
 body {
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
   /* font-family: 'Montserrat', sans-serif; */
 }
+html, body, #app, #app>div {
+  height: 100%;
+}
 
+div#app {
+  height: 100%;
+}
 /* Responsive Branding */
 
 
