--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,3 +1,11 @@
+html, body, #app, #app>div {
+    height: 100%;
+}
+
+div#app {
+    height: 100%;
+}
+
 .grommetux-control-icon {
     fill: #f5f5f5 !important;
     stroke: #f5f5f5 !important;
@@ -126,10 +134,25 @@ a.ui.mini.image.menu-button {
     margin-top: 5%;
     -webkit-transition-duration: 0.5s;
     transition-duration: 0.5s;
+    transition: transform 0.5s;
 }
 
 a.ui.mini.image.menu-button:hover {
-    width: 55px;
+    transition: transform 0.5s;
+    transform: scale(1.02);
+}
+
+a.ui.mini.image.showcase-menu-button {
+    width: 50px;
+    margin-top: 1%;
+    margin-left: 1%;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+}
+
+a.ui.mini.image.showcase-menu-button:hover {
+    transition: transform 0.5s;
+    transform: scale(1.1);
 }
 
 .ui.medium.image, .ui.medium.images .image, .ui.medium.images img, .ui.medium.images svg {
@@ -179,7 +202,7 @@ p.grommetux-paragraph.grommetux-paragraph--medium {
 }
 
 .showcase-container {
-    padding: 0 5%;
+    padding: 0 10%;
 }
 
 h1.ui.header.portfolio-header {
@@ -195,7 +218,6 @@ h1.ui.header.portfolio-header {
     padding: 0 40px;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Montserrat:200);
 .showcase-figure {
     font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
     position: relative;
@@ -207,7 +229,7 @@ h1.ui.header.portfolio-header {
     text-align: left;
     font-size: 16px;
     background: #000;
-    box-shadow: 0px 2px 5px #212121;    
+    box-shadow: 0px 2px 5px #212121;
     border-radius: 5px;
 }
 
@@ -311,7 +333,84 @@ h1.ui.header.portfolio-header {
     font-size: 1.1rem;
 }
 
+.showcase-heading {
+    font-size: 3.4rem;
+    color: #f5f5f5;
+    text-shadow: 1px 2px 7px #212121b3;
+    letter-spacing: 4px;
+}
 
+.single-showcase-container {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+img.ui.fluid.image.main-showcase-img {
+    border-radius: 4px;
+    box-shadow: 0px 0px 20px #21212170;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+    transition: transform 0.5s;
+    margin-bottom: 20px;
+}
+
+img.ui.fluid.image.main-showcase-img:hover {
+    cursor: pointer;
+    -webkit-transform: translateY(-3px);
+    -ms-transform: translateY(-3px);
+    transform: translateY(-3px);
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+    transition: transform 0.5s;
+}
+
+.showcase-value {
+    font-size: 1.5rem;
+    text-align: center;
+    color: #fff;
+    letter-spacing: 3px;
+    font-weight: 100;
+}
+
+.showcase-type {
+    text-align: center;
+    line-height: 2.2rem;
+    font-size: 0.9rem;
+    margin-top: 5px;
+    letter-spacing: 2px;
+    font-weight: 700;
+    color: #212121a1;
+    padding: 0px 20px;
+    background: #f5f5f5;;
+}
+
+.showcase-details {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 1.2rem;
+    line-height: 35px;
+    color: #212121;
+    font-weight: 300;
+}
+
+a.showcase-link {
+    font-size: 2rem;
+    color: #f5f5f5;
+    text-shadow: 1px 2px 7px #212121b3;
+    letter-spacing: 4px;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+    transition: transform 0.5s;
+}
+
+a.showcase-link:hover {
+    font-size: 2.5rem;
+    transition: transform 0.5s;
+    transform: scale(1.5);
+}
 /* Mobile branding  */
 
 @media only screen and (max-width: 767px) and (min-width: 320px) {
@@ -331,7 +430,6 @@ h1.ui.header.portfolio-header {
         height: auto;
         font-size: 1rem;
     }
-    
     .showcase-figure:hover h3, .showcase-figure.hover h3 {
         -webkit-transition-delay: 0.3s;
         transition-delay: 0.3s;
@@ -339,10 +437,17 @@ h1.ui.header.portfolio-header {
         letter-spacing: 3px;
         font-size: 2.5rem;
     }
-    
     .showcase-figure:hover h4, .showcase-figure.hover h4 {
         -webkit-transition-delay: 0.35s;
         transition-delay: 0.35s;
         font-size: 1.1rem;
+    }
+
+    .showcase-details {
+        width: 90%;
+    }
+
+    .showcase-container {
+        padding: 0;
     }
 }
