--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -320,9 +320,21 @@ div#main-content {
     transform: rotate(-15deg) scale(1.05) translateX(25px);
     transition: 0.2s ease;
 }
+ #canvas-child {
+    width: 540px;
+    margin-left: 13px;
+    padding-top: 50px;
+}
 .parent-container:hover .child-container img#gilagoat-logo {
     transform: rotate(15deg) scale(1.05) translateX(25px) translateY(-30px);
     transition: 0.2s ease;
+}
+.parent-container:hover .child-container img#canvas-logo {
+    animation-name: spin;
+    animation-duration: 10000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    /* transition: 0.2s ease; */
 }
 
 img#destinder-logo {
@@ -331,6 +343,7 @@ img#destinder-logo {
 img#gilagoat-logo {
     transition: 0.2s ease;
 }
+
 
 .project-title {
     font-family: 'Montserrat', 'Avenir', sans-serif;
@@ -411,6 +424,10 @@ i.large.icon, i.large.icons {
     /* background: linear-gradient(135deg, #f96,#ff5e62); */
     background: #59C58E;
 }
+.parent-container#canvas {
+    /* background: linear-gradient(135deg, #f96,#ff5e62); */
+    background: #646464;
+}
 
 .child-container {
     /* margin-top: 50px; */
@@ -441,13 +458,30 @@ i.large.icon, i.large.icons {
 #gilagoat .child-container {
     padding-top: 55px;
 }
+
+#canvas img {
+    transition: 0.2s ease;
+    width: 57%;
+}
 .project-dates {
-    /* font-family: "BebasNeueRegular", sans-serif; */
-    opacity: 0.4;
+    opacity: 0.8;
     font-size: 1.2rem;
     letter-spacing: 0.5px;
 }
 
+
+@-moz-keyframes spin {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
+}
 
 
 /* Mobile branding  */
@@ -552,6 +586,11 @@ i.large.icon, i.large.icons {
     .typed-header {
         display: none;
     }
+    #canvas-child {
+        width: 425px;
+        margin-left: 40px;
+        padding-top: 50px;
+    }
     /* end new styles */
     .showcase-details {
         width: 90%;
@@ -562,5 +601,23 @@ i.large.icon, i.large.icons {
 
     div#showcase-main-content {
         padding-top: 240px;
+    }
+}
+
+/* Tablet */
+
+@media only screen and (min-width: 768px) and (max-width: 1100px) {
+}
+
+/* Large Screens */
+@media only screen and (min-width: 1500px) {
+    div#showcase-main-content {
+        padding-top: 400px;
+    }
+    .showcase-main-img {
+        height: 500px;
+        position: absolute;
+        z-index: 999;
+        top: calc(100vh - 550px);
     }
 }
