--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -128,6 +128,35 @@ a.showcase-link:hover {
     box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;
 }
 
+.new-nav-mobile {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    padding-left: 5%;
+    padding-right: 5%;
+    justify-content: space-between;
+    position: fixed;
+    left: 0;
+    right: 0;
+    background-color: white;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    z-index: 9500;
+    top: 0px;
+    transition: 0.2s ease;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;
+    flex-flow: row wrap;
+}
+
+.nav-links.mobile-nav {
+    flex-flow: column;
+    align-items: flex-start;
+    width: 98%;
+}
+
 .nav2 {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -160,6 +189,17 @@ a.new-nav-item {
 }
 
 a.new-nav-item:hover {
+    opacity: 0.5;
+    transition: all 0.2s ease;
+}
+a.new-nav-item-mobile {
+    color: #414141;
+    font-size: 1.2rem;
+    transition: all 0.2s ease;
+    margin: 10px 0;
+}
+
+a.new-nav-item-mobile:hover {
     opacity: 0.5;
     transition: all 0.2s ease;
 }
